Work around module issues
Signed-off-by: Andrew Aylett <andrew@aylett.co.uk>